--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ include = [{ path = "data", format = ["sdist", "wheel"] }]
 python = "^3.10"
 pexpect = "^4.9.0"
 google-generativeai = "^0.5.3"
+openai = "^1.30.1"
 
 [tool.poetry.scripts]
 aicmd = 'laphaelaicmd_linux:cli'
