--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,9 @@ include = [{ path = "data", format = ["sdist", "wheel"] }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pexpect = "^4.9.0"
 google-generativeai = "^0.5.3"
+openai = "^1.30.1"
+ptyprocess = "^0.7.0"
 
 [tool.poetry.scripts]
 aicmd = 'laphaelaicmd_linux:cli'
