--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ openai = "^1.30.1"
 [tool.poetry.scripts]
 aicmd = 'laphaelaicmd_linux:cli'
 laphaelaicmd_linux = 'laphaelaicmd_linux:cli'
+laphaelaicmd-linux = 'laphaelaicmd_linux:cli'
 
 [build-system]
 requires = ["poetry-core"]
