--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python = "^3.10"
 google-generativeai = "^0.5.3"
 openai = "^1.30.1"
 ptyprocess = "^0.7.0"
+toml = "^0.10.2"
 
 [tool.poetry.scripts]
 aicmd = 'laphaelaicmd_linux:cli'
