--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "laphaelaicmd_linux"
+name = "LaphaeL-aicmd"
 version = "1.2.3"
 description = "Python program enable chat AI to execute commands on linux"
 authors = [
