--- a/data/_cli_outputs.toml
+++ b/data/_cli_outputs.toml
@@ -1,7 +1,7 @@
 [help_text]
 text = """
 \nWhat is this program:\n\
-This program is named \"LaphaeLaicmd-linux\", it enables chat AI to execute commands on linux with feedback-loop for multi-step missions \n\
+This program is named \"LaphaeL-aicmd\", it enables chat AI to execute commands on linux with feedback-loop for multi-step missions \n\
 This program is released under GNU v3, you may see \"LICENSE\" file to see more informations\n\
 \nUsage tutorial:\n\
 - Enter \"aicmd\" in linux terminal to start this program\n\
@@ -17,5 +17,5 @@ These instructions can be runned by entering the following commands after the pr
 \"/clear\" : This will clear the content to be appended to the AI (Only clear new contents, chat history won't be cleared)
 \"/cmd\" : This will manually execute the linux shell command following it, e.g., \"/cmd whoami\" will execute \"whoami\"\
 \nTo see more informations, you may visit the following links:\n\
-Github repository: https://github.com/LaphaeL12304/LaphaeLaicmd-linux\n
+Github repository: https://github.com/LaphaeL12304/LaphaeL-aicmd\n
 """
