reset default custom_prompt

--- a/data/AI_settings.toml
+++ b/data/AI_settings.toml
@@ -39,7 +39,7 @@ the assistant does not execute further commands.
 # 自定义提示词 - Customized prompt
 [custom_instruct]
 text = """
-Please answer in this language: 简体中文. Other customize instructions: 我的home目录下的文件夹名称是中文的
+None
 """
 
 # 其他信息 - Other informations
